hmm 5 swag init && ./scripts/buildprod.sh
